Changes on index.html

--- a/index.html
+++ b/index.html
@@ -28,24 +28,28 @@
 <header class="bck darkest text color white">
     <div class="row ">
         <div class="column _3">
-            <h2 class="logo text normal">tuk<span class="text book">tuk</span></h2>
+            <a href="http://tuktuk.tapquo.com" class="logo text normal color white">tuk<span class="text book">tuk</span></a>
         </div>
         <nav class="column _6 offset_3 text normal right">
-            <a href="#"><span class="icon user"></span>Login</a>
-            <a href="#"><span class="icon pencil"></span>Signup</a>
-            <a href="#"><span class="icon upload"></span>Upload Icons</a>
+            <a href="#"><span class="icon twitter"></span>Tweet me</a>
+            <a href="#" class="button">Download</a>
         </nav>
     </div>
 </header>
 
 
 <!-- ========================== LANDING ========================== -->
-<section class="landing bck dark text color white shadow center">
+<section class="landing bck dark text color white  center">
     <div class="row">
         <div class="column _10 offset_1">
-            <h1>tuk<span class="text thin">tuk</span></h1>
-            <h3 class="margin bottom">Sleek, intuitive, and powerful front-end framework for faster and easier web development.</h3>
-            <a href="#" class="button large ">Download TukTuk 1.0</a>
+            <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
+            <h3 class="margin bottom">This is not a front-end framework more ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
+            <a href="#" class="button large margin bottom">Download tuktuk</a>
+            <nav class=>
+                <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin right text color white">GitHub Project</a>
+                <a href="examples/" class="margin right text color white">Examples</a>
+                <span>Version 0.1.0</span>
+            </nav>
         </div>
     </div>
 </section>
@@ -57,30 +61,29 @@
         <div class="column _8 offset_2">
             <h1 class="text color theme">A new kid on the block</h1>
             <h4 class="text thin">
-                Slidus is designed from the ground-up to support and enhance the
-workflow of web designers. It’s more than just a slogan for us.
+                Not try to be competence of Bootstrap or Foundation, they play in another league. I only worry that sites can create easy, fast, responsive and fully extensible.
             </h4>
         </div>
     </div>
     <div class="row text center book margin top">
 
         <div class="column _3">
-            <h1 class="icon-css3 text color theme"></h1>
+            <h1 class="icon css3 text color theme"></h1>
             <h5>CSS3 Powered</h5>
-            <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maxime omnis accusantium id libero officia</small>
+            <small>The premise is to use as much as possible the features of the latest CSS specification. Don't try to use tuktuk in your hated IE6.</small>
         </div>
         <div class="column _3">
-            <h1 class="icon-paper-plane text color theme"></h1>
-            <h5>One style to rule all</h5>
-            <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maxime omnis accusantium id libero officia</small>
+            <h1 class="icon paper-plane text color theme"></h1>
+            <h5>Lightweight & fast</h5>
+            <small>You don't want to carry heavy stylesheets that the only thing they get is a slow loading site. Tuktuk makes it easy, weighs 15kb.</small>
         </div>
         <div class="column _3">
-            <h1 class="icon-cube text color theme"></h1>
+            <h1 class="icon cube text color theme"></h1>
             <h5>Object Oriented CSS</h5>
-            <small>The purpose  is to encourage code reuse and, ultimately, faster and more efficient stylesheets that are easier to add to and maintain.</small>
+            <small>The purpose  is to encourage code reuse and faster and more efficient stylesheets that are easier to add to and maintain.</small>
         </div>
         <div class="column _3">
-            <h1 class="icon-github text color theme"></h1>
+            <h1 class="icon github text color theme"></h1>
             <h5>Community Project</h5>
             <small>Each new line of code welcome, I hope that developers and restless minds help me to improve day by day this humble project.</small>
         </div>
@@ -196,16 +199,16 @@ workflow of web designers. It’s more than just a slogan for us.
     </div>
     <div class="row">
         <div class="column _8 ">
-              <a href="#" class="button large"><span class="icon user"></span>Large</a>
-              <a href="#" class="button "><span class="icon user"></span>Normal</a>
-              <a href="#" class="button secondary"><span class="icon user"></span>Secondary</a>
-              <a href="#" class="button success"><span class="icon user"></span>Success</a>
-              <a href="#" class="button alert"><span class="icon user"></span>Alert</a>
-              <a href="#" class="button small"><span class="icon user"></span>Small</a>
-              <a href="#" class="button tiny"><span class="icon user"></span>Tiny</a>
+              <a href="#" class="button large"><span class="icon html5"></span>Large</a>
+              <a href="#" class="button "><span class="icon css3"></span>Normal</a>
+              <a href="#" class="button secondary"><span class="icon safari"></span>Secondary</a>
+              <a href="#" class="button success"><span class="icon checkmark"></span>Success</a>
+              <a href="#" class="button alert"><span class="icon cancel"></span>Alert</a>
+              <a href="#" class="button small"><span class="icon chrome"></span>Small</a>
+              <a href="#" class="button tiny"><span class="icon firefox"></span>Tiny</a>
           </div>
         <div class="column _4">
-            <a href="#" class="button anchor margin top">Anchor</a>
+            <a href="#" class="button anchor margin top"><span class="icon checkmark"></span>Anchor</a>
         </div>
     </div>
 </section>
@@ -493,7 +496,7 @@ workflow of web designers. It’s more than just a slogan for us.
     <div class="row margin bottom">
         <div class="column _10 offset_1 text center color white">
             <h1>Author</h1>
-            <h3 class="text thin">Javi Jimenez is the CTO and Co-Founder of <a href="http://tapquo.com">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com">Lungo</a>, <a href="http://quojs.tapquo.com">QuoJS</a>, <a href="http://monocle.tapquo.com">Monocle</a> used by thousands of developers around the world.</h3>
+            <h3 class="text thin">Javi Jimenez is the CTO and CO-founder of <a href="http://tapquo.com">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com">Lungo</a>, <a href="http://quojs.tapquo.com">QuoJS</a>, <a href="http://monocle.tapquo.com">Monocle</a> used by thousands of developers around the world.</h3>
          </div>
      </div>
 
@@ -523,9 +526,9 @@ workflow of web designers. It’s more than just a slogan for us.
             <p class="text bold">Need some help?</p>
             <small>For quick answers or help <span class="text normal">connect</span> with me in</small>
             <h3>
-                <a href="#" class="icon-twitter"></a>
-                <a href="#" class="icon-facebook"></a>
-                <a href="#" class="icon-google-plus"></a>
+                <a href="#" class="icon twitter"></a>
+                <a href="#" class="icon facebook"></a>
+                <a href="#" class="icon google-plus"></a>
             </h3>
         </div>
     </div>
