--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
         <div class="column _10 offset_1">
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
-            <h3 class="margin bottom">This is not a front-end framework more ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
+            <h3 class="margin bottom">This is not another front-end framework ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
             <a href="#" class="button large margin bottom">Download tuktuk</a>
             <nav class=>
                 <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin right text color white">GitHub Project</a>
@@ -61,7 +61,7 @@
         <div class="column _8 offset_2">
             <h1 class="text color theme">A new kid on the block</h1>
             <h4 class="text thin">
-                Not try to be competence of Bootstrap or Foundation, they play in another league. I only worry that sites can create easy, fast, responsive and fully extensible.
+                Not trying to be competence of Bootstrap or Foundation, they play in another league. I am just worried about sites to be created easy, fast, responsive and fully extensible.
             </h4>
         </div>
     </div>
@@ -80,12 +80,12 @@
         <div class="column _3">
             <h1 class="icon cube text color theme"></h1>
             <h5>Object Oriented CSS</h5>
-            <small>The purpose  is to encourage code reuse and faster and more efficient stylesheets that are easier to add to and maintain.</small>
+            <small>The purpose is to encourage code reuse and faster and more efficient stylesheets that are easier to add to and maintain.</small>
         </div>
         <div class="column _3">
             <h1 class="icon github text color theme"></h1>
             <h5>Community Project</h5>
-            <small>Each new line of code welcome, I hope that developers and restless minds help me to improve day by day this humble project.</small>
+            <small>Each new line of code is welcome, I hope that developers and restless minds help me to improve this humble project day by day.</small>
         </div>
     </div>
 </section>
